# 333

./: .gitignore  App.tsx  README.md  app.config.ts  package-lock.json  package.json  pyproject.toml
backend/: .env.example  README.md
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: orchestrator.py
backend/app/models/: player.py
backend/app/schemas/: health.py  live.py  training.py
backend/app/services/: live.py  training.py
backend/tests/: test_health.py
configs/pipelines/: broadcast.yaml
docs/: Tennis_Vision_AI_Specification.md  roadmap.md
frontend/: README.md
scripts/: THIRD_PARTY_RESOURCES.md  bootstrap_third_party_repos.sh  setup_cloud_instance.md
src/api/: base44Client.js  entities.js
src/components/billsplitter/: BillReceiptScanner.jsx  PaymentRequestModal.jsx  SplitHistoryCard.jsx
src/components/fitness/: FamilyMemberGrid.jsx  FitnessPostCard.jsx  GoalTrackerCard.jsx  NewPostModal.jsx  ProfileSnapshotModal.jsx
src/components/goals/: ContributeModal.jsx  ContributionList.jsx  GoalCard.jsx  GoalJar3D.jsx
src/components/polls/: CreatePollModal.jsx  PollCard.jsx
src/components/receipts/: ReceiptCard.jsx  ReceiptFilters.jsx  ReceiptScanner.jsx
src/navigation/: AppNavigator.tsx
src/pages/: BillSplitter.jsx  Dashboard.jsx  FamilyMap.jsx  Fitness.jsx  GoalDetails.jsx  Goals.jsx  Layout.jsx  Polls.jsx  Receipts.jsx  TravelPlanning.jsx  index.jsx
src/screens/: JoinRoomScreen.tsx  VideoCallScreen.native.tsx  VideoCallScreen.web.tsx
(+3 files in other folders)
