[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tennis-vision-ai"
version = "0.1.0"
description = "Autonomous tennis fatigue detection pipeline"
authors = [
    {name = "Tennis Vision AI Team"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.4",
    "httpx>=0.24",
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "asyncpg>=0.29",
    "python-dotenv>=1.0",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "pydantic-settings>=2.0"
]

[project.optional-dependencies]
ml = [
    "xgboost>=2.0",
    "scikit-learn>=1.4"
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21"
]

[tool.setuptools]
packages = ["app"]
package-dir = {"" = "backend"}

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
